--- a/doc.ipynb
+++ b/doc.ipynb
@@ -45,15 +45,9 @@
     "\n",
     "with $\\tilde{y}_1 = [y_1]$ and $\\tilde{y}_2 = [y_2\\ y_3]^\\top$.\n",
     "\n",
-    "Using the MATLAB symbolic toolbox, we can now implement the split-up problem (see `rosenbrock_example.m`):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Using the MATLAB symbolic toolbox, we can now implement the split-up problem (see `rosenbrock_example.m`):\n",
+    "\n",
+    "```Matlab\n",
     "y1  =   sym('y1',[1,1],'real');\n",
     "y2  =   sym('y2',[2,1],'real');\n",
     "\n",
@@ -70,43 +64,28 @@
     "lb2 =   [-inf; -inf];\n",
     "\n",
     "ub1 =   [inf];\n",
-    "ub2 =   [inf; inf];"
+    "ub2 =   [inf; inf];\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++17",
-   "language": "C++17",
-   "name": "xcpp17"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "text/x-c++src",
-   "file_extension": ".cpp",
-   "mimetype": "text/x-c++src",
-   "name": "c++",
-   "version": "-std=c++17"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
