added caption for next chapter to the documentation

--- a/doc.ipynb
+++ b/doc.ipynb
@@ -65,7 +65,12 @@
     "\n",
     "ub1 =   [inf];\n",
     "ub2 =   [inf; inf];\n",
-    "```"
+    "```",
+	"\n",
+	"---\n",
+    "## Solving the Problem using ALADIN\n",
+    "\n",
+    "TODO\n"
    ]
   }
  ],
