added new section to the documentation

--- a/doc.ipynb
+++ b/doc.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "with $\\tilde{y}_1 = [y_1]$ and $\\tilde{y}_2 = [y_2\\ y_3]^\\top$.\n",
     "\n",
-    "Using the MATLAB symbolic toolbox, we can now implement the split-up problem (see `rosenbrock_example.m`):\n",
+    "Using the MATLAB symbolic toolbox, we can now define the split-up problem (see `rosenbrock_example.m`) as:\n",
     "\n",
     "```Matlab\n",
     "y1  =   sym('y1',[1,1],'real');\n",
@@ -65,12 +65,60 @@
     "\n",
     "ub1 =   [inf];\n",
     "ub2 =   [inf; inf];\n",
-    "```",
-	"\n",
-	"---\n",
+    "```\n",
+    "\n",
+    "---\n",
     "## Solving the Problem using ALADIN\n",
     "\n",
-    "TODO\n"
+    "To solve the problem implemented above, we first have to convert the the symbolic variables to MATLAB functions:\n",
+    "\n",
+    "```Matlab\n",
+    "emptyfun =   @(x) [];\n",
+    "\n",
+    "f1f      =   matlabFunction(f1,'Vars',{y1});\n",
+    "f2f      =   matlabFunction(f2,'Vars',{y2});\n",
+    "\n",
+    "h1f      =   emptyfun;\n",
+    "h2f      =   matlabFunction(h2,'Vars',{y2});\n",
+    "```\n",
+    "\n",
+    "Next, we set the solver options:\n",
+    "\n",
+    "```Matlab\n",
+    "maxit =   15;\n",
+    "rho   =   10;\n",
+    "mu    =   100;\n",
+    "eps   =   1e-4;\n",
+    "\n",
+    "opts  =   struct('rho0',rho,'rhoUpdate',1,'rhoMax',5e3,'mu0',...\n",
+    "                 mu,'muUpdate',1,'muMax',1e5,'eps',eps,...\n",
+    "                 'maxiter',maxit,'actMargin',-1e-6,'hessian',...\n",
+    "                 'full','solveQP','MA57','reg','true',...\n",
+    "                 'locSol','ipopt','innerIter',2400,'innerAlg',...\n",
+    "                 'full','plot',false,'Hess','standard');\n",
+    "```\n",
+    "\n",
+    "Finally, we solve the problem with ALADIN:\n",
+    "\n",
+    "```Matlab\n",
+    "ffifun           =   {f1f,f2f};\n",
+    "[ggifun{1:N}]    =   deal(emptyfun);\n",
+    "hhifun           =   {h1f,h2f};\n",
+    "AA               =   {A1,A2};\n",
+    "yy0              =   {[-2],[-2;1]};\n",
+    "lam0             =   10*(rand(1)-0.5);\n",
+    "llbx             =   {lb1,lb2};\n",
+    "uubx             =   {ub1,ub2};\n",
+    "Sig              =   {eye(1),eye(2)};\n",
+    "\n",
+    "[xoptAL, loggAL] =   run_ALADIN(ffifun,ggifun,hhifun,AA,yy0,...\n",
+    "                                      lam0,llbx,uubx,Sig,opts);\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "## ALADIN Solver Options\n",
+    "\n",
+    "TODO"
    ]
   }
  ],
