added a link to the documentation

--- a/doc.ipynb
+++ b/doc.ipynb
@@ -82,7 +82,7 @@
     "h2f      =   matlabFunction(h2,'Vars',{y2});\n",
     "```\n",
     "\n",
-    "Next, we set the solver options:\n",
+    "Next, we set the solver options. For more information on available options see [ALADIN solver options](#Options)\n",
     "\n",
     "```Matlab\n",
     "maxit =   15;\n",
@@ -116,7 +116,7 @@
     "```\n",
     "\n",
     "---\n",
-    "## ALADIN Solver Options\n",
+    "## <a name=\"Options\"></a>ALADIN Solver Options\n",
     "\n",
     "TODO"
    ]
