cleaned up main ALADIN a bit

--- a/doc.ipynb
+++ b/doc.ipynb
@@ -120,6 +120,39 @@
     "\n",
     "TODO"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 lhj kj \n",
+    "öojh ölkh ö hlk\n",
+    "- opj \n",
+    "- okh "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
