fixed exmaple bug

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -62,13 +62,13 @@ $\mu^0$	& numeric  & $10^3 \dots 10^6$ \\
 	\hline 
 $r_\mu$	& numeric  & $1 \dots 2$  \\ 
 	\hline 
-	&  &  \\ 
+\texttt{locSol}	& string  &\{ \texttt{ipopt}, ... \} \\ 
 	\hline 
-	&  &  \\ 
+\texttt{solveQP}	& string  & \{\texttt{MA57, linsolve, ...} \}  \\ 
 	\hline 
-	&  &  \\ 
+\texttt{plot}	& logical  & -  \\ 
 	\hline 
-	&  &  \\ 
+\texttt{Sig}	& string  & \{\texttt{Hess, const} \} \\ 
 	\hline 
 \end{tabular} 
 \caption{ALADIN options struct.}
