completely revised version of ALADIn, splitted up all long functions to smaller ones. Frst version working for 5 bus OPF.

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -328,7 +328,7 @@ Further research is strongly needed here.
 \section{Numerical Examples}
 \subsection{Problem Setup with Different Tools}
 \subsubsection{MATLAB Symbolic}
-\paragraph{First Example} \\
+\paragraph{First Example} 
 As a first example, the following non-convex problem is taken into consideration
 
 \begin{align*}
@@ -375,7 +375,7 @@ Next, we set the solver options
 Finally, we solve the problem with ALADIN
 \lstinputlisting[firstline=49,lastline=70]{../examples/example_main.m}
 
-\paragraph{Rosenbrock Function} \\
+\paragraph{Rosenbrock Function} 
 For the Rosenbrock Function we consider
 \begin{align*}
 \min_{x_1, x_2} f(x_1, x_2) &= (1 - x_1)^2 + 100 \cdot (x_2 - x_1^2)^2 \\
